added some changes in profile page

--- a/src/sass/pages/_main.scss
+++ b/src/sass/pages/_main.scss
@@ -5,6 +5,7 @@
 @import "./people";
 @import "./search";
 @import "./searchall";
+@import "./account";
 
 // .movies__wrapper {
 //   display: flex;
