profile-style add

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -37,4 +37,7 @@ footer {
         margin-right: 2rem;
         padding: 1rem;
     }
+    .center__join {
+        justify-content: center;
+    }
 }
