added some html

--- a/src/sass/pages/_account.scss
+++ b/src/sass/pages/_account.scss
@@ -60,3 +60,31 @@
 .card__keySearc {
   position: relative;
 }
+.profile__movie-tv {
+  .title_header {
+    display: flex;
+    align-items: center;
+  }
+  .flex__profile {
+    display: flex;
+    align-items: center;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
