--- a/src/sass/pages/_actor.scss
+++ b/src/sass/pages/_actor.scss
@@ -105,10 +105,10 @@
   cursor: pointer;
 }
 
-span:hover {
-  background: black;
-  cursor: pointer;
-}
+// span:hover {
+//   background: black;
+//   cursor: pointer;
+// }
 
 @media screen and (max-width: 750px) {
   .actor__wrapper{
