--- a/src/sass/pages/_moviesdetails.scss
+++ b/src/sass/pages/_moviesdetails.scss
@@ -405,3 +405,44 @@
   width: 80%;
   margin: auto;
 }
+
+
+
+
+.nav__Star {
+  .dropdow-content a {
+    float: none;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  .dropdow-content div {
+    float: none;
+    color: black;
+    display: block;
+    text-align: left;
+    cursor: pointer;
+  }
+  .dropdow-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    border: 1px solid rgba(99, 99, 99, 0.527);
+    border-radius: 0.5rem;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 0 1rem;
+  }
+  .dropdow .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: inherit;
+    font-family: inherit;
+    // margin: 0;
+  }
+  .dropdow:hover .dropdow-content {
+    display: block;
+  }
+}
