--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -7,80 +7,122 @@
   place-items: center;
   z-index: 10;
   .loader {
-    width: 96px;
-    height: 48px;
-    display: inline-block;
+    width: 175px;
+    height: 80px;
+    display: block;
+    margin:auto;
+    background-image: radial-gradient(circle 25px at 25px 25px, #FFF 100%, transparent 0), radial-gradient(circle 50px at 50px 50px, #FFF 100%, transparent 0), radial-gradient(circle 25px at 25px 25px, #FFF 100%, transparent 0), linear-gradient(#FFF 50px, transparent 0);
+    background-size: 50px 50px, 100px 76px, 50px 50px, 120px 40px;
+    background-position: 0px 30px, 37px 0px, 122px 30px, 25px 40px;
+    background-repeat: no-repeat;
     position: relative;
-    background: #fff;
-    border-radius: 48px 48px 0 0;
     box-sizing: border-box;
-    overflow: hidden;
-  }
-  .loader::after {
-    content: "";
-    box-sizing: border-box;
-    position: absolute;
-    width: 24px;
-    height: 12px;
-    border-radius: 24px 24px 0 0;
-    background: #ff3d00;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
   }
   .loader::before {
-    content: "";
+    content: '';  
+    left: 60px;
+    bottom: 18px;
     position: absolute;
-    width: 4px;
-    height: 32px;
-    left: 0;
-    right: 0;
-    margin: auto;
-    bottom: 0;
-    background: #ff3d00;
-    transform-origin: 50% 100%;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background-color: #FF3D00;
+    background-image: radial-gradient(circle 8px at 18px 18px, #FFF 100%, transparent 0), radial-gradient(circle 4px at 18px 0px, #FFF 100%, transparent 0), radial-gradient(circle 4px at 0px 18px, #FFF 100%, transparent 0), radial-gradient(circle 4px at 36px 18px, #FFF 100%, transparent 0), radial-gradient(circle 4px at 18px 36px, #FFF 100%, transparent 0), radial-gradient(circle 4px at 30px 5px, #FFF 100%, transparent 0), radial-gradient(circle 4px at 30px 5px, #FFF 100%, transparent 0), radial-gradient(circle 4px at 30px 30px, #FFF 100%, transparent 0), radial-gradient(circle 4px at 5px 30px, #FFF 100%, transparent 0), radial-gradient(circle 4px at 5px 5px, #FFF 100%, transparent 0);
+    background-repeat: no-repeat;
     box-sizing: border-box;
-    animation: animloader 2s linear infinite alternate;
+    animation: rotationBack 3s linear infinite;
+  }
+  .loader::after {
+    content: '';  
+    left: 94px;
+    bottom: 15px;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #FF3D00;
+    background-image: radial-gradient(circle 5px at 12px 12px, #FFF 100%, transparent 0), radial-gradient(circle 2.5px at 12px 0px, #FFF 100%, transparent 0), radial-gradient(circle 2.5px at 0px 12px, #FFF 100%, transparent 0), radial-gradient(circle 2.5px at 24px 12px, #FFF 100%, transparent 0), radial-gradient(circle 2.5px at 12px 24px, #FFF 100%, transparent 0), radial-gradient(circle 2.5px at 20px 3px, #FFF 100%, transparent 0), radial-gradient(circle 2.5px at 20px 3px, #FFF 100%, transparent 0), radial-gradient(circle 2.5px at 20px 20px, #FFF 100%, transparent 0), radial-gradient(circle 2.5px at 3px 20px, #FFF 100%, transparent 0), radial-gradient(circle 2.5px at 3px 3px, #FFF 100%, transparent 0);
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+    animation: rotationBack 4s linear infinite reverse;
+  }
+  
+ 
+}
+
+@keyframes rotationBack {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
   }
 }
 
-@keyframes animloader {
+.loader__movie {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.973);
+  display: grid;
+  place-items: center;
+  z-index: 10;
+  .lds-ellipsis {
+    display: inline-block;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ellipsis div {
+    position: absolute;
+    top: 33px;
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    background: #fff;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+    left: 8px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+    left: 8px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 32px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 56px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  
+  
+  
+}
+@keyframes lds-ellipsis1 {
   0% {
-    transform: rotate(-70deg);
+    transform: scale(0);
   }
-  10% {
-    transform: rotate(-40deg);
+  100% {
+    transform: scale(1);
   }
-  20%,
-  45%,
-  35% {
-    transform: rotate(-10deg);
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
   }
-  40%,
-  30% {
-    transform: rotate(-30deg);
+  100% {
+    transform: scale(0);
   }
-  50%,
-  60% {
-    transform: rotate(20deg);
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
   }
-  55%,
-  65%,
-  75% {
-    transform: rotate(40deg);
-  }
-  70% {
-    transform: rotate(45deg);
-  }
-  85%,
-  90% {
-    transform: rotate(50deg);
-  }
-  95% {
-    transform: rotate(75deg);
-  }
-  100%,
-  93% {
-    transform: rotate(70deg);
+  100% {
+    transform: translate(24px, 0);
   }
 }
