added read more

--- a/src/sass/pages/_actor.scss
+++ b/src/sass/pages/_actor.scss
@@ -110,6 +110,14 @@
   color: aqua;
   cursor: pointer;
 }
+#myBtn {
+  border: none;
+  background: #fff;
+  font-size: 1.6rem;
+  color: rgb(1,180,228);
+  font-weight: 600;
+  cursor: pointer;
+}
 
 // span:hover {
 //   background: black;
