added same remove errors profile page

--- a/src/sass/pages/_actor.scss
+++ b/src/sass/pages/_actor.scss
@@ -140,3 +140,15 @@
     width: 100%;
   }
 }
+
+
+.pager .button {
+  background: #78909C !important;
+}
+
+.pager .is-secondary {
+  color: #78909C !important;
+  background: transparent !important;
+  border: 2px solid #78909C !important;
+  margin: 2px !important;
+}
