--- a/src/sass/pages/_moviesdetails.scss
+++ b/src/sass/pages/_moviesdetails.scss
@@ -470,7 +470,13 @@
 }
 .icons__movies{
   display: flex;
+  margin-top: 2rem;
 }
 .date__icons{
   display: flex;
+  margin-left: 2rem;
+}
+.dates_icons{
+  display: flex;
+  margin-left: 3.8rem;
 }
