--- a/src/sass/pages/_moviesdetails.scss
+++ b/src/sass/pages/_moviesdetails.scss
@@ -470,13 +470,23 @@
 }
 .icons__movies{
   display: flex;
-  margin-top: 2rem;
+  justify-content: space-between;
+  align-items: center;
+  p{
+    font-weight: 600;
+    padding-top: 1.2rem;
+  }
+  input {
+    padding: 1rem;
+    border: 1px solid #dbdbdb;
+    border-radius: 1rem;
+  }
+  padding: 0 .8rem ;
 }
 .date__icons{
-  display: flex;
-  margin-left: 2rem;
+  margin-top: 2rem;
 }
 .dates_icons{
-  display: flex;
-  margin-left: 3.8rem;
+  margin-top: 1rem;
+ 
 }
